--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.10'
-    id 'org.jmailen.kotlinter' version "1.20.1"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.20'
+    id 'org.jmailen.kotlinter' version '1.20.1'
+    id 'maven-publish'
 }
 
 group 'org.narsereg'
@@ -11,20 +12,29 @@ repositories {
 }
 
 dependencies {
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
-    compile 'org.thymeleaf:thymeleaf:3.+'
-    compile 'org.togglz:togglz-core:2.+'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.20'
+    implementation 'org.thymeleaf:thymeleaf:3.+'
+    implementation 'org.togglz:togglz-core:2.+'
 }
 
 compileKotlin {
-    kotlinOptions.jvmTarget = "1.6"
+    kotlinOptions.jvmTarget = '1.8'
+    kotlinOptions.javaParameters = true
 }
 
 compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.6"
+    kotlinOptions.jvmTarget = '1.8'
 }
 
-subprojects {
-    apply plugin: 'kotlin'
-    apply plugin: 'org.jmailen.kotlinter'
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier "sources"
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
 }
