--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
-    id 'org.jmailen.kotlinter' version '1.25.2'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
+    id 'org.jmailen.kotlinter' version '2.2.0'
     id 'maven-publish'
 }
 
@@ -12,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.61'
     implementation 'org.thymeleaf:thymeleaf:3.+'
     implementation 'org.togglz:togglz-core:2.+'
 }
