--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
     id 'org.jmailen.kotlinter' version '2.2.0'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'maven-publish'
 }
 
@@ -9,12 +10,19 @@ version '0.1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.61'
     implementation 'org.thymeleaf:thymeleaf:3.+'
     implementation 'org.togglz:togglz-core:2.+'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.+'
+    testImplementation 'io.mockk:mockk:1.+'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
@@ -26,15 +34,15 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = '1.8'
 }
 
-task sourceJar(type: Jar) {
-    from sourceSets.main.allSource
-    classifier "sources"
-}
-
 publishing {
     publications {
         maven(MavenPublication) {
             from components.java
         }
     }
+}
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier "sources"
 }
