Add fat jar and soucre jar to azure build

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,9 @@ jobs:
         inputs:
           gradleWrapperFile: 'gradlew'
           javaHomeOption: 'JDKVersion'
-          publishJUnitResults: false
+          publishJUnitResults: true
           testResultsFiles: '**/TEST-*.xml'
-          tasks: 'build'
+          tasks: 'build sourceJar shadowJar'
 
 trigger:
   - master
